# tcanvas

./: .pre-commit-config.yaml  CHANGELOG.md  README.rst  pyproject.toml  setup.cfg
.github/workflow/: main.yml
.github/workflows/: main.yml
src/tcanvas/: geometry.py  tcanvas.py  test.py  test_all.py
