[metadata]
name = tcanvas
author = Lukas Koch
author_email=lukas.koch@mailbox.org
#maintainer = Scikit-HEP
#maintainer_email = scikit-hep-admins@googlegroups.com
url = https://github.com/ast0815/tcanvas
description = Text based canvases.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Topic :: Utilities

[options]
python_requires = >=3.6
packages = find:
package_dir =
    =src
install_requires =
    click >= 7.0.0

[options.extras_require]
test =
  pytest >=4.6

[options.packages.find]
where = src
# Not needed unless not following the src layout
# exclude =
#     tests
#     extern

#[tool:pytest]
#junit_family=xunit2
#testpaths =
#    tests
